--- a/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
+++ b/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
@@ -21,11 +21,11 @@
     <div style="text-align: left">
       <h4 class="title">No Sentence found</h4>
       <button
-        mat-button
+        nbButton
         (click)="refresh()"
         class="button"
       >
-        <mat-icon>refresh</mat-icon>
+        <nb-icon icon="refresh-outline"></nb-icon>
       </button>
       <p>
         To add Sentences, start from <em>New Sentence</em> or <em>Test the Bot</em> in Tock Studio, or talk to the bot on any connected
@@ -52,7 +52,7 @@
         (click)="refresh()"
         nbTooltip="Refresh"
       >
-        <mat-icon>refresh</mat-icon>
+        <nb-icon icon="refresh-outline"></nb-icon>
       </nb-action>
 
       <nb-action
@@ -60,7 +60,7 @@
         (click)="downloadSentencesDump()"
         nbTooltip="Download a sentences dump of the current selection"
       >
-        <mat-icon>cloud_download</mat-icon>
+        <nb-icon icon="cloud-download-outline"></nb-icon>
       </nb-action>
 
       <nb-action
@@ -68,7 +68,7 @@
         (click)="switchToScrollView()"
         nbTooltip="Switch to scroll view"
       >
-        <mat-icon>grid_off</mat-icon>
+        <nb-icon icon="list-outline"></nb-icon>
       </nb-action>
 
       <nb-action
@@ -76,7 +76,7 @@
         (click)="switchAdvancedView(true)"
         nbTooltip="Display additional stats"
       >
-        <mat-icon>expand_more</mat-icon>
+        <nb-icon icon="chevron-down-outline"></nb-icon>
       </nb-action>
 
       <nb-action
@@ -84,7 +84,7 @@
         (click)="switchAdvancedView(false)"
         nbTooltip="Hide additional stats"
       >
-        <mat-icon>expand_less</mat-icon>
+        <nb-icon icon="chevron-up-outline"></nb-icon>
       </nb-action>
 
       <nb-action
@@ -92,7 +92,7 @@
         (click)="switchToTableView()"
         nbTooltip="Switch to table view"
       >
-        <mat-icon>grid_on</mat-icon>
+        <nb-icon icon="grid-outline"></nb-icon>
       </nb-action>
     </nb-actions>
   </div>
