--- a/nlp/admin/web/src/app/test-nlp/test-intent-error.component.html
+++ b/nlp/admin/web/src/app/test-nlp/test-intent-error.component.html
@@ -46,7 +46,7 @@
       (click)="download()"
       nbTooltip="Download the whole error list"
     >
-      <mat-icon>cloud_download</mat-icon>
+      <nb-icon icon="cloud-download-outline"></nb-icon>
     </button>
   </nb-card-body>
 </nb-card>
@@ -117,7 +117,10 @@
                   status="success"
                   (click)="validate(row)"
                 >
-                  <mat-icon nbTooltip="Validate Intent">check_circle</mat-icon>
+                  <nb-icon
+                    icon="checkmark-circle-2-outline"
+                    nbTooltip="Validate Intent"
+                  ></nb-icon>
                 </button>
                 <button
                   nbButton
@@ -126,7 +129,10 @@
                   status="danger"
                   (click)="change(row)"
                 >
-                  <mat-icon nbTooltip="Change the Intent">update</mat-icon>
+                  <nb-icon
+                    icon="refresh-outline"
+                    nbTooltip="Change the Intent"
+                  ></nb-icon>
                 </button>
                 <button
                   nbButton
@@ -135,7 +141,10 @@
                   *ngIf="canReveal(row)"
                   (click)="reveal(row)"
                 >
-                  <mat-icon nbTooltip="Reveal the sentence">visibility</mat-icon>
+                  <nb-icon
+                    icon="eye-outline"
+                    nbTooltip="Reveal the sentence"
+                  ></nb-icon>
                 </button>
               </p>
             </td>
