--- a/bot/admin/web/src/app/analytics/dialogs/dialogs.component.html
+++ b/bot/admin/web/src/app/analytics/dialogs/dialogs.component.html
@@ -126,7 +126,7 @@
           nbButton
           ghost
           (click)="exportDialogs()"
-          matTooltip="Export All Dialogs With Ratings"
+          nbTooltip="Export All Dialogs With Ratings"
         >
           <nb-icon icon="download-outline"></nb-icon>
         </button>
@@ -162,7 +162,7 @@
         nbButton
         ghost
         (click)="viewAllWithThisText()"
-        matTooltip="View all dialogs using this text"
+        nbTooltip="View all dialogs using this text"
       >
         <nb-icon icon="message-square-outline"></nb-icon>
       </button>
