--- a/bot/admin/web/src/app/faq/faq-management/faq-management.component.scss
+++ b/bot/admin/web/src/app/faq/faq-management/faq-management.component.scss
@@ -1,5 +1,23 @@
 @import '@nebular/theme/styles/global/breakpoints';
 
+section {
+  &.grid-actions {
+    display: grid;
+    grid-gap: 0.5rem;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: end;
+  }
+
+  & nb-card {
+    height: min-content;
+  }
+
+  & .alert-config {
+    height: fit-content;
+  }
+}
+
 .aside {
   height: fit-content;
 }
