--- a/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
+++ b/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
@@ -18,7 +18,18 @@
   *ngIf="configuration"
   [nbSpinner]="uploading"
 >
-  <nb-card-header>Upload a Dump</nb-card-header>
+  <nb-card-header class="d-flex justify-content-between align-items-start gap-1">
+    Upload a Dump
+    <button
+      nbButton
+      ghost
+      shape="round"
+      nbTooltip="Close"
+      (click)="cancel()"
+    >
+      <nb-icon icon="close-outline"></nb-icon>
+    </button>
+  </nb-card-header>
   <nb-card-body>
     <div *ngIf="!report">
       <p>
